# grounded-conversation-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
data/raw/conversations/: 2024-11-billing-latency.txt  2024-12-mfa-reset.txt
data/raw/operations/: incident-runbook.md  oncall-handover-checklist.md
data/raw/policies/: data-retention.md  refund-and-credit-policy.md  support-sla.md
scripts/: build_embeddings.py  build_indices.py  run_retrieval_benchmark.py  smoke_generate.py
src/: __init__.py  app.py  chunking.py  cli.py  config.py  diversity.py  evaluation.py  generation.py  index_artifacts.py  ingestion.py  logging_utils.py  monitoring.py  pipeline.py  reranking.py  retrieval.py  schemas.py
src/api/: __init__.py  app.py  models.py
tests/: conftest.py  test_chunking.py  test_diversity.py  test_generation.py  test_ingestion.py  test_monitoring.py  test_pipeline_result.py  test_retrieval.py
