[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "grounded-conversation-rag"
version = "0.1.0"
description = "Grounded conversation RAG with lexical/dense retrieval, evaluation, and Streamlit UI."
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
  { name = "Liam Geron" }
]
license = { text = "UNLICENSED" }
keywords = ["rag", "retrieval", "nlp", "llm", "streamlit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26,<2.0",
  "scikit-learn>=1.4,<1.5",
  "httpx>=0.27,<0.28",
  "rank-bm25>=0.2.2",
  "streamlit>=1.32",
  "plotly>=5.20",
  "pydantic>=2.6",
  "pyyaml>=6.0.1",
  "rapidfuzz>=3.6",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dense = [
  "torch>=2.2,<2.4",
  "sentence-transformers==2.6.1",
  "faiss-cpu>=1.7.4",
]
eval = [
  "ragas>=0.1.9",
  "openai>=1.18",
]
local_llm = [
  "torch>=2.2,<2.4",
  "transformers>=4.37,<4.39",
]
api = [
  "fastapi>=0.110,<0.112",
  "uvicorn>=0.29,<0.31",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.3.7",
  "ipykernel>=6.29",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.dev]
dependencies = [".[dev,eval,dense]"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100
